# Backend

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_user_profile_fields.py  b000c708994e_initial_schema.py  b2c3d4e5f6a1_add_mobility_school_field.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
seeds/: seed.py
seeds/data/: destinations.json  institutions.json
src/: main.py
src/app/: main.py
src/app/api/v1/: admin.py  (+11 more)
src/app/core/: config.py  dependencies.py  exceptions.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  destination.py  document.py  institution.py  mobility.py  notification.py  task.py  user.py
src/app/schemas/: budget.py  common.py  destination.py  document.py  guide.py  mobility.py  task.py  user.py
src/app/services/: admin_service.py  auth_service.py  budget_service.py  cache_service.py  checklist_service.py  destination_service.py  document_service.py  guide_service.py  mobility_service.py  notification_service.py  storage_service.py  timeline_service.py  user_service.py
src/app/workers/: ai_prefetch_worker.py  notification_worker.py
tests/: test_health.py
tests/integration/api/: test_api_stubs.py  test_timeline_checklist.py
tests/unit/: test_ai_prompts.py  test_core.py  test_exceptions.py  test_imports.py  test_schemas.py
tests/unit/ai/: test_ai_service.py
tests/unit/services/: test_checklist_service.py  test_timeline_service.py
(+9 files in other folders)
